--- a/styles/styles.css
+++ b/styles/styles.css
@@ -214,4 +214,10 @@ body {
         .main__menu-item-info-image img {
             max-width: 532px;
         }
-    }
+
+        .main__menu-items {
+            flex-wrap: wrap;    
+            white-space: nowrap;
+            row-gap: 20px;
+        }
+}
